2013-06-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c: Do not enqueue_disk, add_disk already do it.

2013-06-06  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c, device-src/null-device.c,
	  device-src/rait-device.c, device-src/s3-device.c,
	  device-src/tape-device.c, device-src/vfs-device.c
	  (*device__finish_file): Set in_file even when already on error.
	* device-src/xfer-dest-taper-directtcp.c: Always call
	  device_finish_file().

2013-06-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c (unload_disklist): New function.
	* server-src/diskfile.h (unload_disklist): New prototype.
	* perl/Amanda/Disklist.swg: swig unload_disklist.
	* server-src/amadmin.c, server-src/amtrmidx.c,
	  server-src/amtrmlog.c: Call unload_disklist().
	* installcheck/Amanda_Disklist.pl: Test unload_disklist.

2013-05-30  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Add --dereference to all gtar command.

2013-05-23  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmpconnobj.c: Fix SU_SET_PORT argument.

2013-05-22  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Parse psql version with four numbers.

2013-05-21  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/gnutar.pl: Fix for fc18.

2013-05-21  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: Parse the LEOM property.

2013-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/ndmp.pm (get_device): Return the
	  Amanda::Changer::Error on error.

2013-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c (s3_make_bucket): Init add_create to FALSE.

2013-05-17  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Handle DURABLE_REDUCED_AVAILABILITY for OAUTH2.
	* man/xml-source/amanda-devices.7.xml: Document
	  DURABLE_REDUCED_AVAILABILITY for google storage.

2013-05-16  Jean-Louis Martineau <martineau@zmanda.com>