@@ -1,3 +1,6 @@
+2013-06-10  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Report/human.pm: Center 'DUMPER STATS'.
+
 2013-06-07  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/find.c: Do not enqueue_disk, add_disk already do it.
 
